#[[
IDT4: Unofficial source port for idTech4 based games
Copyright (c) 1999-2011 id Software LLC, a ZeniMax Media company. 
Copyright (c) 2022 Boris I. Bendovsky (bibendovsky@hotmail.com) and Contributors.
SPDX-License-Identifier: GPL-3.0-only AND MIT
]]

cmake_minimum_required(VERSION 3.16.9 FATAL_ERROR)
project(idt4_d3_ded VERSION 1.0.0 LANGUAGES CXX)

message(STATUS "[${PROJECT_NAME}] Version: ${PROJECT_VERSION}")

add_executable(${PROJECT_NAME})

set_target_properties(${PROJECT_NAME}
	PROPERTIES
		C_STANDARD 90
		C_STANDARD_REQUIRED ON
		C_EXTENSIONS OFF
		CXX_STANDARD 98
		CXX_STANDARD_REQUIRED ON
		CXX_EXTENSIONS OFF
		OUTPUT_NAME "doom3ded"
		WIN32_EXECUTABLE TRUE
)

target_compile_definitions(${PROJECT_NAME}
	PRIVATE
		__DOOM__
		__DOOM_DLL__
		ID_DEDICATED
)

target_link_libraries(${PROJECT_NAME}
	PRIVATE
		dbghelp
		iphlpapi
		opengl32
		winmm
		wsock32
		idt4::directx
	PRIVATE
		idt4_curl_lib
		idt4_id_lib
)

if(idt4_pch)
	target_precompile_headers(${PROJECT_NAME}
		PRIVATE
			../idlib/precompiled.h
	)
endif()

target_sources(${PROJECT_NAME}
	PRIVATE
		../cm/CollisionModel.h
		../cm/CollisionModel_contacts.cpp
		../cm/CollisionModel_contents.cpp
		../cm/CollisionModel_debug.cpp
		../cm/CollisionModel_files.cpp
		../cm/CollisionModel_load.cpp
		../cm/CollisionModel_local.h
		../cm/CollisionModel_rotate.cpp
		../cm/CollisionModel_trace.cpp
		../cm/CollisionModel_translate.cpp
		../framework/BuildDefines.h
		../framework/BuildVersion.h
		../framework/CVarSystem.cpp
		../framework/CVarSystem.h
		../framework/CmdSystem.cpp
		../framework/CmdSystem.h
		../framework/Common.cpp
		../framework/Common.h
		../framework/Compressor.cpp
		../framework/Compressor.h
		../framework/Console.cpp
		../framework/Console.h
		../framework/DeclAF.cpp
		../framework/DeclAF.h
		../framework/DeclEntityDef.cpp
		../framework/DeclEntityDef.h
		../framework/DeclFX.cpp
		../framework/DeclFX.h
		../framework/DeclManager.cpp
		../framework/DeclManager.h
		../framework/DeclPDA.cpp
		../framework/DeclPDA.h
		../framework/DeclParticle.cpp
		../framework/DeclParticle.h
		../framework/DeclSkin.cpp
		../framework/DeclSkin.h
		../framework/DeclTable.cpp
		../framework/DeclTable.h
		../framework/DemoChecksum.h
		../framework/DemoFile.cpp
		../framework/DemoFile.h
		../framework/EditField.cpp
		../framework/EditField.h
		../framework/EventLoop.cpp
		../framework/EventLoop.h
		../framework/File.cpp
		../framework/File.h
		../framework/FileSystem.cpp
		../framework/FileSystem.h
		../framework/KeyInput.cpp
		../framework/KeyInput.h
		../framework/Licensee.h
		../framework/Session.cpp
		../framework/Session.h
		../framework/Session_local.h
		../framework/Session_menu.cpp
		../framework/Unzip.cpp
		../framework/Unzip.h
		../framework/UsercmdGen.cpp
		../framework/UsercmdGen.h
		../framework/async/AsyncClient.cpp
		../framework/async/AsyncClient.h
		../framework/async/AsyncNetwork.cpp
		../framework/async/AsyncNetwork.h
		../framework/async/AsyncServer.cpp
		../framework/async/AsyncServer.h
		../framework/async/MsgChannel.cpp
		../framework/async/MsgChannel.h
		../framework/async/NetworkSystem.cpp
		../framework/async/NetworkSystem.h
		../framework/async/ServerScan.cpp
		../framework/async/ServerScan.h
		../renderer/Cinematic.cpp
		../renderer/Cinematic.h
		../renderer/GuiModel.cpp
		../renderer/GuiModel.h
		../renderer/Image.h
		../renderer/Image_files.cpp
		../renderer/Image_init.cpp
		../renderer/Image_load.cpp
		../renderer/Image_process.cpp
		../renderer/Image_program.cpp
		../renderer/Interaction.cpp
		../renderer/Interaction.h
		../renderer/Material.cpp
		../renderer/Material.h
		../renderer/MegaTexture.cpp
		../renderer/MegaTexture.h
		../renderer/Model.cpp
		../renderer/Model.h
		../renderer/ModelDecal.cpp
		../renderer/ModelDecal.h
		../renderer/ModelManager.cpp
		../renderer/ModelManager.h
		../renderer/ModelOverlay.cpp
		../renderer/ModelOverlay.h
		../renderer/Model_ase.cpp
		../renderer/Model_ase.h
		../renderer/Model_beam.cpp
		../renderer/Model_liquid.cpp
		../renderer/Model_local.h
		../renderer/Model_lwo.cpp
		../renderer/Model_lwo.h
		../renderer/Model_ma.cpp
		../renderer/Model_ma.h
		../renderer/Model_md3.cpp
		../renderer/Model_md3.h
		../renderer/Model_md5.cpp
		../renderer/Model_prt.cpp
		../renderer/Model_sprite.cpp
		../renderer/RenderEntity.cpp
		../renderer/RenderSystem.cpp
		../renderer/RenderSystem.h
		../renderer/RenderSystem_init.cpp
		../renderer/RenderWorld.cpp
		../renderer/RenderWorld.h
		../renderer/RenderWorld_demo.cpp
		../renderer/RenderWorld_load.cpp
		../renderer/RenderWorld_local.h
		../renderer/RenderWorld_portals.cpp
		../renderer/VertexCache.cpp
		../renderer/VertexCache.h
		../renderer/draw_arb.cpp
		../renderer/draw_arb2.cpp
		../renderer/draw_common.cpp
		../renderer/draw_nv10.cpp
		../renderer/draw_nv20.cpp
		../renderer/draw_r200.cpp
		../renderer/glext.h
		../renderer/jpeg-6/jcapimin.c
		../renderer/jpeg-6/jccoefct.c
		../renderer/jpeg-6/jccolor.c
		../renderer/jpeg-6/jcdctmgr.c
		../renderer/jpeg-6/jchuff.c
		../renderer/jpeg-6/jchuff.h
		../renderer/jpeg-6/jcinit.c
		../renderer/jpeg-6/jcmainct.c
		../renderer/jpeg-6/jcmarker.c
		../renderer/jpeg-6/jcmaster.c
		../renderer/jpeg-6/jcomapi.c
		../renderer/jpeg-6/jconfig.h
		../renderer/jpeg-6/jcparam.c
		../renderer/jpeg-6/jcphuff.c
		../renderer/jpeg-6/jcprepct.c
		../renderer/jpeg-6/jcsample.c
		../renderer/jpeg-6/jdapimin.c
		../renderer/jpeg-6/jdapistd.c
		../renderer/jpeg-6/jdatadst.c
		../renderer/jpeg-6/jdatasrc.c
		../renderer/jpeg-6/jdcoefct.c
		../renderer/jpeg-6/jdcolor.c
		../renderer/jpeg-6/jdct.h
		../renderer/jpeg-6/jddctmgr.c
		../renderer/jpeg-6/jdhuff.c
		../renderer/jpeg-6/jdhuff.h
		../renderer/jpeg-6/jdinput.c
		../renderer/jpeg-6/jdmainct.c
		../renderer/jpeg-6/jdmarker.c
		../renderer/jpeg-6/jdmaster.c
		../renderer/jpeg-6/jdmerge.c
		../renderer/jpeg-6/jdphuff.c
		../renderer/jpeg-6/jdpostct.c
		../renderer/jpeg-6/jdsample.c
		../renderer/jpeg-6/jdtrans.c
		../renderer/jpeg-6/jerror.c
		../renderer/jpeg-6/jerror.h
		../renderer/jpeg-6/jfdctflt.c
		../renderer/jpeg-6/jfdctfst.c
		../renderer/jpeg-6/jfdctint.c
		../renderer/jpeg-6/jidctflt.c
		../renderer/jpeg-6/jidctfst.c
		../renderer/jpeg-6/jidctint.c
		../renderer/jpeg-6/jidctred.c
		../renderer/jpeg-6/jinclude.h
		../renderer/jpeg-6/jmemmgr.c
		../renderer/jpeg-6/jmemnobs.c
		../renderer/jpeg-6/jmemsys.h
		../renderer/jpeg-6/jmorecfg.h
		../renderer/jpeg-6/jpegint.h
		../renderer/jpeg-6/jpeglib.h
		../renderer/jpeg-6/jquant1.c
		../renderer/jpeg-6/jquant2.c
		../renderer/jpeg-6/jutils.c
		../renderer/jpeg-6/jversion.h
		../renderer/qgl.h
		../renderer/qgl_linked.h
		../renderer/simplex.h
		../renderer/tr_backend.cpp
		../renderer/tr_deform.cpp
		../renderer/tr_font.cpp
		../renderer/tr_guisurf.cpp
		../renderer/tr_light.cpp
		../renderer/tr_lightrun.cpp
		../renderer/tr_local.h
		../renderer/tr_main.cpp
		../renderer/tr_orderIndexes.cpp
		../renderer/tr_polytope.cpp
		../renderer/tr_render.cpp
		../renderer/tr_rendertools.cpp
		../renderer/tr_shadowbounds.cpp
		../renderer/tr_stencilshadow.cpp
		../renderer/tr_subview.cpp
		../renderer/tr_trace.cpp
		../renderer/tr_trisurf.cpp
		../renderer/tr_turboshadow.cpp
		../renderer/wglext.h
		../sound/OggVorbis/ogg/ogg.h
		../sound/OggVorbis/ogg/os_types.h
		../sound/OggVorbis/oggsrc/bitwise.c
		../sound/OggVorbis/oggsrc/framing.c
		../sound/OggVorbis/vorbis/codec.h
		../sound/OggVorbis/vorbis/vorbisenc.h
		../sound/OggVorbis/vorbis/vorbisfile.h
		../sound/OggVorbis/vorbissrc/analysis.c
		../sound/OggVorbis/vorbissrc/backends.h
		../sound/OggVorbis/vorbissrc/barkmel.c
		../sound/OggVorbis/vorbissrc/bitrate.c
		../sound/OggVorbis/vorbissrc/bitrate.h
		../sound/OggVorbis/vorbissrc/block.c
		../sound/OggVorbis/vorbissrc/books/coupled/res_books_stereo.h
		../sound/OggVorbis/vorbissrc/books/floor/floor_books.h
		../sound/OggVorbis/vorbissrc/books/uncoupled/res_books_uncoupled.h
		../sound/OggVorbis/vorbissrc/codebook.c
		../sound/OggVorbis/vorbissrc/codebook.h
		../sound/OggVorbis/vorbissrc/codec_internal.h
		../sound/OggVorbis/vorbissrc/envelope.c
		../sound/OggVorbis/vorbissrc/envelope.h
		../sound/OggVorbis/vorbissrc/floor0.c
		../sound/OggVorbis/vorbissrc/floor1.c
		../sound/OggVorbis/vorbissrc/highlevel.h
		../sound/OggVorbis/vorbissrc/info.c
		../sound/OggVorbis/vorbissrc/lookup.c
		../sound/OggVorbis/vorbissrc/lookup.h
		../sound/OggVorbis/vorbissrc/lookup_data.h
		../sound/OggVorbis/vorbissrc/lpc.c
		../sound/OggVorbis/vorbissrc/lpc.h
		../sound/OggVorbis/vorbissrc/lsp.c
		../sound/OggVorbis/vorbissrc/lsp.h
		../sound/OggVorbis/vorbissrc/mapping0.c
		../sound/OggVorbis/vorbissrc/masking.h
		../sound/OggVorbis/vorbissrc/mdct.c
		../sound/OggVorbis/vorbissrc/mdct.h
		../sound/OggVorbis/vorbissrc/misc.h
		../sound/OggVorbis/vorbissrc/modes/floor_all.h
		../sound/OggVorbis/vorbissrc/modes/psych_11.h
		../sound/OggVorbis/vorbissrc/modes/psych_16.h
		../sound/OggVorbis/vorbissrc/modes/psych_44.h
		../sound/OggVorbis/vorbissrc/modes/psych_8.h
		../sound/OggVorbis/vorbissrc/modes/residue_16.h
		../sound/OggVorbis/vorbissrc/modes/residue_44.h
		../sound/OggVorbis/vorbissrc/modes/residue_44u.h
		../sound/OggVorbis/vorbissrc/modes/residue_8.h
		../sound/OggVorbis/vorbissrc/modes/setup_11.h
		../sound/OggVorbis/vorbissrc/modes/setup_16.h
		../sound/OggVorbis/vorbissrc/modes/setup_22.h
		../sound/OggVorbis/vorbissrc/modes/setup_32.h
		../sound/OggVorbis/vorbissrc/modes/setup_44.h
		../sound/OggVorbis/vorbissrc/modes/setup_44u.h
		../sound/OggVorbis/vorbissrc/modes/setup_8.h
		../sound/OggVorbis/vorbissrc/modes/setup_X.h
		../sound/OggVorbis/vorbissrc/os.h
		../sound/OggVorbis/vorbissrc/psy.c
		../sound/OggVorbis/vorbissrc/psy.h
		../sound/OggVorbis/vorbissrc/registry.c
		../sound/OggVorbis/vorbissrc/registry.h
		../sound/OggVorbis/vorbissrc/res0.c
		../sound/OggVorbis/vorbissrc/scales.h
		../sound/OggVorbis/vorbissrc/sharedbook.c
		../sound/OggVorbis/vorbissrc/smallft.c
		../sound/OggVorbis/vorbissrc/smallft.h
		../sound/OggVorbis/vorbissrc/synthesis.c
		../sound/OggVorbis/vorbissrc/vorbisenc.c
		../sound/OggVorbis/vorbissrc/vorbisfile.c
		../sound/OggVorbis/vorbissrc/window.h
		../sound/OggVorbis/vorbissrc/windowvb.c
		../sound/snd_cache.cpp
		../sound/snd_decoder.cpp
		../sound/snd_efxfile.cpp
		../sound/snd_emitter.cpp
		../sound/snd_local.h
		../sound/snd_shader.cpp
		../sound/snd_system.cpp
		../sound/snd_wavefile.cpp
		../sound/snd_world.cpp
		../sound/sound.h
		../sys/sys_local.cpp
		../sys/sys_local.h
		../sys/sys_public.h
		../sys/win32/rc/AFEditor_resource.h
		../sys/win32/rc/Common_resource.h
		../sys/win32/rc/CreateResourceIDs.cpp
		../sys/win32/rc/CreateResourceIDs.h
		../sys/win32/rc/Debugger_resource.h
		../sys/win32/rc/DeclEditor_resource.h
		../sys/win32/rc/GuiEd_resource.h
		../sys/win32/rc/MaterialEditor_Resource.h
		../sys/win32/rc/PDAEditor_resource.h
		../sys/win32/rc/ParticleEditor_resource.h
		../sys/win32/rc/PropTree_resource.h
		../sys/win32/rc/Radiant_resource.h
		../sys/win32/rc/ScriptEditor_resource.h
		../sys/win32/rc/SoundEditor_resource.h
		../sys/win32/rc/doom_resource.h
		../sys/win32/win_cpu.cpp
		../sys/win32/win_glimp.cpp
		../sys/win32/win_input.cpp
		../sys/win32/win_local.h
		../sys/win32/win_main.cpp
		../sys/win32/win_net.cpp
		../sys/win32/win_qgl.cpp
		../sys/win32/win_rounded_corner_mgr.cpp
		../sys/win32/win_rounded_corner_mgr.h
		../sys/win32/win_shared.cpp
		../sys/win32/win_snd.cpp
		../sys/win32/win_syscon.cpp
		../sys/win32/win_wndproc.cpp
		../tools/compilers/aas/AASBuild.cpp
		../tools/compilers/aas/AASBuild_file.cpp
		../tools/compilers/aas/AASBuild_gravity.cpp
		../tools/compilers/aas/AASBuild_ledge.cpp
		../tools/compilers/aas/AASBuild_local.h
		../tools/compilers/aas/AASBuild_merge.cpp
		../tools/compilers/aas/AASCluster.cpp
		../tools/compilers/aas/AASCluster.h
		../tools/compilers/aas/AASFile.cpp
		../tools/compilers/aas/AASFile.h
		../tools/compilers/aas/AASFileManager.cpp
		../tools/compilers/aas/AASFileManager.h
		../tools/compilers/aas/AASFile_local.h
		../tools/compilers/aas/AASFile_optimize.cpp
		../tools/compilers/aas/AASFile_sample.cpp
		../tools/compilers/aas/AASReach.cpp
		../tools/compilers/aas/AASReach.h
		../tools/compilers/aas/Brush.cpp
		../tools/compilers/aas/Brush.h
		../tools/compilers/aas/BrushBSP.cpp
		../tools/compilers/aas/BrushBSP.h
		../tools/compilers/compiler_public.h
		../tools/compilers/dmap/dmap.cpp
		../tools/compilers/dmap/dmap.h
		../tools/compilers/dmap/facebsp.cpp
		../tools/compilers/dmap/gldraw.cpp
		../tools/compilers/dmap/glfile.cpp
		../tools/compilers/dmap/leakfile.cpp
		../tools/compilers/dmap/map.cpp
		../tools/compilers/dmap/optimize.cpp
		../tools/compilers/dmap/optimize_gcc.cpp
		../tools/compilers/dmap/output.cpp
		../tools/compilers/dmap/portals.cpp
		../tools/compilers/dmap/shadowopt3.cpp
		../tools/compilers/dmap/tritjunction.cpp
		../tools/compilers/dmap/tritools.cpp
		../tools/compilers/dmap/ubrush.cpp
		../tools/compilers/dmap/usurface.cpp
		../tools/compilers/renderbump/renderbump.cpp
		../tools/compilers/roqvq/NSBitmapImageRep.cpp
		../tools/compilers/roqvq/codec.cpp
		../tools/compilers/roqvq/codec.h
		../tools/compilers/roqvq/gdefs.h
		../tools/compilers/roqvq/quaddefs.h
		../tools/compilers/roqvq/roq.cpp
		../tools/compilers/roqvq/roq.h
		../tools/compilers/roqvq/roqParam.cpp
		../tools/compilers/roqvq/roqParam.h
		../ui/BindWindow.cpp
		../ui/BindWindow.h
		../ui/ChoiceWindow.cpp
		../ui/ChoiceWindow.h
		../ui/DeviceContext.cpp
		../ui/DeviceContext.h
		../ui/EditWindow.cpp
		../ui/EditWindow.h
		../ui/FieldWindow.cpp
		../ui/FieldWindow.h
		../ui/GameBearShootWindow.cpp
		../ui/GameBearShootWindow.h
		../ui/GameBustOutWindow.cpp
		../ui/GameBustOutWindow.h
		../ui/GameSSDWindow.cpp
		../ui/GameSSDWindow.h
		../ui/GuiScript.cpp
		../ui/GuiScript.h
		../ui/ListGUI.cpp
		../ui/ListGUI.h
		../ui/ListGUILocal.h
		../ui/ListWindow.cpp
		../ui/ListWindow.h
		../ui/MarkerWindow.cpp
		../ui/MarkerWindow.h
		../ui/Rectangle.h
		../ui/RegExp.cpp
		../ui/RegExp.h
		../ui/RenderWindow.cpp
		../ui/RenderWindow.h
		../ui/SimpleWindow.cpp
		../ui/SimpleWindow.h
		../ui/SliderWindow.cpp
		../ui/SliderWindow.h
		../ui/UserInterface.cpp
		../ui/UserInterface.h
		../ui/UserInterfaceLocal.h
		../ui/Window.cpp
		../ui/Window.h
		../ui/Winvar.cpp
		../ui/Winvar.h
	PRIVATE
		../sys/win32/rc/res/PropTree.rc2
		../sys/win32/rc/doom.rc
		$<IF:$<VERSION_GREATER:${MSVC_VERSION},1310>,../sys/win32/rc/idt4.manifest,../sys/win32/rc/idt4.rc>
)

install(
	TARGETS ${PROJECT_NAME}
	RUNTIME DESTINATION "."
)
